se ha comenzado con vida, queda a la mitad, colocar proceso de ideacion

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 
                    <!--APP VIDA-->
                    <div class="grid-item element-item p_one_third">
-                    <a href="single-portfolio.html">
+                    <a href="vida.html">
                         <img src="demo-images/vidaapp.jpg" alt="vida" />
                         <div class="portfolio-text-holder">
                             <p class="portfolio-text">Vida</p>
