terminado vida, comenzando con proyecto chile valora. ademas se añadio el apartado de contacto

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <!--OTRO ARTICULO SIRVE-->
                 <div class="grid-item element-item p_one_third">
-                    <a href="single.html">
+                    <a href="chile-valora.html">
                         <img src="demo-images/CHILEVALORA.jpg" alt="chilevalora" />
                         <div class="portfolio-text-holder">
                             <p class="portfolio-text">Chile Valora</p>
