se inabilitaron botanica joyas y chile valora

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class= "subir-fotos">
                    <!--OTRO ARTICULO!!-->
                 <div class="grid-item element-item p_one_third">
-                    <a href="botanica-joyas.html">
+                    <a href="#">
                         <img src="demo-images/botanica-joyas-def.jpg" alt="botanica joyas" />
                         <div class="portfolio-text-holder">
                             <p class="portfolio-text">Botánica Joyas</p>
@@ -131,7 +131,7 @@
                 </div>
                 <!--OTRO ARTICULO SIRVE-->
                 <div class="grid-item element-item p_one_third">
-                    <a href="chile-valora.html">
+                    <a href="#">
                         <img src="demo-images/CHILEVALORA.jpg" alt="chilevalora" />
                         <div class="portfolio-text-holder">
                             <p class="portfolio-text">Chile Valora</p>
