se modifico la pagina de contacto

--- a/contact.html
+++ b/contact.html
@@ -85,25 +85,12 @@
                     </h1>
                     <p class="page-desc">Contáctame aquí</p>
                 </div>
-
-                <article>
                   
-                        <div class="one_half ">
-                        <p class="p-cv"><strong>Mis datos</strong></p>
-                            <br>
-                                <b>Address:</b>&nbsp;New York, NY, United States <br>
-                                <b>Phone:</b> +1 234-567-890 <br>
-                                <b>Hours:</b> 6:00 am – 2:00 am <br>
-                        </p>
-                        </div>
-
-
-                        <div class="one_half last">
-                        <p class="p-cv"><strong>Mis redes</strong></p>                           
-                        </div>
-                      
-                </article>
-            </div>
+                    <div class="block content-1170 center-relative center-text top-50 bottom-50">
+                        <a target="_self" class="more-posts-portfolio">
+                            <img src="images/hacia-abajo.png" alt="Load more" />
+                        </a>
+                    </div>
 
 
             <footer class="footer">
