se avanzo bastante en chilevalora, se añadio heartbeat al loading

--- a/cumplo.html
+++ b/cumplo.html
@@ -29,7 +29,9 @@
         <table class="doc-loader">
             <tbody><tr>
                     <td>
-                        <img src="images/mt.png" alt="Loading...">                    
+                        <div id="heart" >
+                            <img class="bottom" src="images/mt.png" width="200px" alt="Loading...">
+                          </div>                    
                     </td>
                 </tr>
             </tbody></table>   
