--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <tbody>
                 <tr>
                     <td>
-                        <img src="images/mt.png" alt="Loading...">                    
+                        <div id="heart" >
+                            <img class="bottom" src="images/mt.png" width="100px" alt="Loading...">
+                          </div>                     
                     </td>
                 </tr>
             </tbody>
