se conecto el index con chilevalora

--- a/chile-valora.html
+++ b/chile-valora.html
@@ -648,7 +648,7 @@
                         <div class="clear"></div>
                     </div>
                     <div class="nav-next">                        
-                        <a href="single-post.html" rel="next">Siguiente</a> 
+                        <a href="botanica-joyas.html" rel="next">Siguiente</a> 
                         <p class="nav-next-text">
                             <img src="images/right.png" alt="Next" />
                         </p>
