--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 <!--OTRO ARTICULO SIRVE-->
                 <div class="grid-item element-item p_one_third">
-                    <a href="#">
+                    <a href="chile-valora.html">
                         <img src="demo-images/CHILEVALORA.jpg" alt="chilevalora" />
                         <div class="portfolio-text-holder">
                             <p class="portfolio-text">Chile Valora</p>
